--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #000000;
+    --foreground: #eaeaf1;
   }
 }
 
@@ -85,3 +85,6 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+
