--- a/src/components/Preloader/style.scss
+++ b/src/components/Preloader/style.scss
@@ -1,6 +1,8 @@
 .curve{
 
-    svg, .background{
+
+    
+      .preloard, .background{
         z-index: 9999 !important;
         position: fixed;
         height: calc(100vh + 600px);
