--- a/src/components/Preloader/style.scss
+++ b/src/components/Preloader/style.scss
@@ -10,7 +10,7 @@
         pointer-events: none;
         left: 0;
         top: 0;
-        path{
+        .preloardpath{
             fill: #141516;
         }
     }
