--- a/src/components/Preloader/style.scss
+++ b/src/components/Preloader/style.scss
@@ -10,9 +10,9 @@
         pointer-events: none;
         left: 0;
         top: 0;
-        .preloardpath{
-            fill: #141516;
-        }
+        // .preloardpath{
+        //     fill: #101010
+        // }
     }
     .background{
         background-color: black;
