--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,9 +22,12 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'Montserrat', sans-serif;
-
+  @apply font-montserrat; /* Add this instead */
 }
+
+
+
+
 
 @layer base {
   :root {
@@ -89,6 +92,7 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  
 }
 
 
